--- a/.gitignore
+++ b/.gitignore
@@ -1,232 +1,70 @@
-# Byte-compiled / optimized / DLL files
+# ------------------------
+# Python basics
+# ------------------------
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
+# Jupyter
+.ipynb_checkpoints/
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
+# Virtual environments
+.env/
+.venv/
 env/
 venv/
-ENV/
-env.bak/
-venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# ------------------------
+# Data
+# ------------------------
+data/*
+!data/README.md   # keep download instructions
 
-# Rope project settings
-.ropeproject
+# ------------------------
+# Models
+# ------------------------
+models/*
+!models/.gitkeep  # keep empty folder for structure
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Machine Learning specific
-# Data files (don't commit large datasets)
-data/*.csv
-data/*.json
-data/*.txt
-data/*.pkl
-data/*.parquet
-data/*.h5
-data/*.xlsx
-data/*.xls
-*.csv
-*.json
-*.txt
-*.pkl
-*.parquet
-
-# Except data README
-!data/README.md
-
-# Model artifacts
-models/
-*.joblib
-*.h5
-*.pt
-*.pth
-*.onnx
-*.pkl
-*.model
-*.bin
-saved_model/
-checkpoints/
-
+# ------------------------
 # MLflow
-mlruns/
+# ------------------------
+mlruns/*
+!mlruns/.gitkeep  # keep empty folder for structure
 mlartifacts/
 
-# Tensorboard logs
+# ------------------------
+# Logs & Outputs
+# ------------------------
 logs/
+*.log
 runs/
 
-# Weights & Biases
-wandb/
-
-# Plots and visualizations
-plots/
-figures/
-outputs/
-results/
-*.png
-*.jpg
-*.jpeg
-*.pdf
-*.svg
-
-# Except README images
-!README_images/
+# ------------------------
+# Plots and results
+# ------------------------
+plots/*
+results/*
+figures/*
+outputs/*
+# but keep final images if you want to show them in docs
 !docs/images/
+!README_images/
 
-# OS specific files
+# ------------------------
+# Secrets
+# ------------------------
+config.ini
+secrets.json
+credentials.json
+.secrets
+
+# ------------------------
+# OS / IDE clutter
+# ------------------------
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# IDE specific files
 .vscode/
 .idea/
 *.swp
-*.swo
 *~
-.project
-.metadata
-.settings/
-
-# Temporary files
-*.tmp
-*.temp
-temp/
-tmp/
-
-# Configuration files with secrets
-config.ini
-secrets.json
-.secrets
-credentials.json
-
-# Large files that shouldn't be in git
-*.zip
-*.tar.gz
-*.rar
-*.7z
-
-# Docker
-.dockerignore
-Dockerfile.prod
-
-# Cache directories
-.cache/
-*.cache
